# JSOG

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cmake-single-platform.yml
include/: BuildableDraft07.h  BuildableSchema.h  CodeBlock.h  CodeProperties.h  Document.h  Draft07.h  Draft07Interpreter.h  DraftInterpreter.cpp  DraftInterpreter.h  DraftRecognisedDocument.h  DraftRecogniser.h  IdentifiableSchema.h  IndexedSyncedSchema.h  JSONPointer.h  LinkedDraft07.h  LinkedSchema.h  ReferenceLocator.h  ResourceIndex.h  Schema.h  SchemaGenerator.h  SchemaInitializer.h  SchemaResource.h  SetMap.h  StringUtils.h  SyncedSchema.h  UnresolvedSchema.h  UriWrapper.h
include/IndexedSyncedSchema/: IndexedArrayProperties.h  IndexedObjectProperties.h  IndexedReinterpretables.h
include/SyncedSchema/: ArrayProperties.h  BoolProperties.h  NullProperties.h  NumberProperties.h  ObjectProperties.h  Reinterpretables.h  StringProperties.h
pretty_printers/: printers.py
src/: BuildableSchema.cpp  Draft07.cpp  Draft07Interpreter.cpp  DraftInterpreter.cpp  IndexedSyncedSchema.cpp  JSONPointer.cpp  LinkedSchema.cpp  Schema.cpp  SchemaInitializer.cpp  StringUtils.cpp  SyncedSchema.cpp  UriWrapper.cpp  main.cpp
src/SyncedSchema/: ArrayProperties.cpp  BoolProperties.cpp  NumberProperties.cpp  ObjectProperties.cpp  StringProperties.cpp
tests/: test_BuildableSchema.cpp  test_CodeBlock.cpp  test_Document.cpp  test_Draft07.cpp  test_DraftRecognisedDocument.cpp  test_IdentifiableSchema.cpp  test_JSONPointer.cpp  test_LinkedSchema.cpp  test_ResourceIndex.cpp  test_SchemaResource.cpp  test_SelfRef.cpp  test_UnresolvedSchema.cpp  test_UriWrapper.cpp  test_objectSchemas.cpp
tests/output_tests/: randomString.cpp  randomString.h  test_arrayTuple.cpp  test_hotel.cpp  test_lengthLimitedString.cpp  test_myself.cpp  test_regexMatcherString.cpp  test_simpleString.cpp  test_stringNumberVariant.cpp  test_true.cpp
tests/samples/: document_1.json  document_2.json  sample.json
tests/schemas_to_compile/: arrayTuple.json  hotel.json  lengthLimitedString.json  myself.json  regexMatcherString.json  simpleString.json  stringNumberVariant.json
